refactor: updte the ui and style files

--- a/src/static/assets/css/typography.scss
+++ b/src/static/assets/css/typography.scss
@@ -1,6 +1,8 @@
 @font-face {
 	font-family: 'Roboto', sans-serif;
 	src: url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
 }
 
 .fa-solid::before,
