--- a/src/static/assets/css/base.css
+++ b/src/static/assets/css/base.css
@@ -2,40 +2,22 @@
 *::before,
 *::after {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 .app {
   display: grid;
-  grid-template-rows: auto 1fr auto;
+  grid-template-rows: 1fr auto 1fr;
   place-items: center;
 }
 
-.header,
-.footer {
-  width: 100%;
-}
-
-.container {
-  width: 100%;
-}
-.container-sm {
-  max-width: 640px;
-}
-.container-md {
-  max-width: 768px;
-}
-.container-lg {
-  max-width: 1024px;
-}
-.container-xl {
-  max-width: 1280px;
-}
-.container-xxl {
-  max-width: 1536px;
+.header {
+  margin-bottom: 1rem;
 }
 
 .pokedex {
   display: grid;
   grid-gap: 1rem;
-  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
 }/*# sourceMappingURL=base.css.map */
