--- a/src/static/assets/css/base.scss
+++ b/src/static/assets/css/base.scss
@@ -6,6 +6,20 @@
 	padding: 0;
 }
 
+html {
+	background-color: rgb(241 245 249);
+	scroll-behavior: smooth;
+}
+
+a {
+	cursor: pointer;
+	text-decoration: none;
+}
+
+ul {
+	list-style: none;
+}
+
 .app {
 	display: grid;
 	grid-template-rows: 1fr auto 1fr;
@@ -38,6 +52,33 @@
 
 .pokedex {
 	display: grid;
-	grid-gap: 1rem;
-	grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+	column-gap: 1rem;
+	row-gap: 2rem;
+	grid-template-columns: repeat(auto-fit, minmax(14rem, 1fr));
+	place-items: center;
+
+	.pokemon {
+		align-items: center;
+		background-color: rgb(249 250 251);
+		border-color: rgb(226 232 240);
+		border-radius: 0.5rem;
+		border-style: solid;
+		border-width: 1px;
+		box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		min-height: 20rem;
+		padding: 1rem;
+		width: 100%;
+
+		&-img {
+			filter: drop-shadow(0 1px 2px rgb(0 0 0 / 0.1)) drop-shadow(0 1px 1px rgb(0 0 0 / 0.06));
+			margin-bottom: 1rem;
+		}
+
+		&-id {
+			color: rgb(156 163 175);
+		}
+	}
 }
