--- a/src/static/assets/css/style.css
+++ b/src/static/assets/css/style.css
@@ -1,6 +1,8 @@
 @font-face {
   font-family: "Roboto", sans-serif;
   src: url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 .fa-solid::before,
 .fa-solid::after,
@@ -17,6 +19,20 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+}
+
+html {
+  background-color: rgb(241, 245, 249);
+  scroll-behavior: smooth;
+}
+
+a {
+  cursor: pointer;
+  text-decoration: none;
+}
+
+ul {
+  list-style: none;
 }
 
 .app {
@@ -70,6 +86,31 @@
 
 .pokedex {
   display: grid;
-  grid-gap: 1rem;
-  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+  -moz-column-gap: 1rem;
+       column-gap: 1rem;
+  row-gap: 2rem;
+  grid-template-columns: repeat(auto-fit, minmax(14rem, 1fr));
+  place-items: center;
+}
+.pokedex .pokemon {
+  align-items: center;
+  background-color: rgb(249, 250, 251);
+  border-color: rgb(226, 232, 240);
+  border-radius: 0.5rem;
+  border-style: solid;
+  border-width: 1px;
+  box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -4px rgba(0, 0, 0, 0.1);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  min-height: 20rem;
+  padding: 1rem;
+  width: 100%;
+}
+.pokedex .pokemon-img {
+  filter: drop-shadow(0 1px 2px rgba(0, 0, 0, 0.1)) drop-shadow(0 1px 1px rgba(0, 0, 0, 0.06));
+  margin-bottom: 1rem;
+}
+.pokedex .pokemon-id {
+  color: rgb(156, 163, 175);
 }/*# sourceMappingURL=style.css.map */
