--- a/src/static/assets/css/card.css
+++ b/src/static/assets/css/card.css
@@ -1,18 +1,3 @@
-@font-face {
-  font-family: "Roboto", sans-serif;
-  src: url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-.fa-solid::before,
-.fa-solid::after,
-.fa-brands::before,
-.fa-brands::after {
-  display: inline-block;
-  text-rendering: auto;
-  -webkit-font-smoothing: antialiased;
-}
-
 .pokedex {
   display: grid;
   -moz-column-gap: 2rem;
@@ -150,76 +135,4 @@
   background-image: url("../img/morphing-diamonds.svg");
   border-radius: 0.5rem;
   padding: 0.25rem 0.5rem;
-}
-
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
-
-html {
-  background-color: rgb(241, 245, 249);
-  scroll-behavior: smooth;
-}
-
-a {
-  cursor: pointer;
-  text-decoration: none;
-}
-
-ul {
-  list-style: none;
-}
-
-.app {
-  display: grid;
-  grid-template-rows: 1fr auto 1fr;
-  place-items: center;
-}
-
-.header,
-.footer {
-  padding: 1rem;
-  width: 100%;
-}
-
-.header {
-  margin-bottom: 1rem;
-}
-
-.footer {
-  margin-top: auto;
-}
-
-.container {
-  padding: 1rem;
-  width: 100%;
-}
-@media (min-width: 576px) {
-  .container {
-    max-width: 540px;
-  }
-}
-@media (min-width: 768px) {
-  .container {
-    max-width: 720px;
-  }
-}
-@media (min-width: 992px) {
-  .container {
-    max-width: 960px;
-  }
-}
-@media (min-width: 1200px) {
-  .container {
-    max-width: 1140px;
-  }
-}
-@media (min-width: 1400px) {
-  .container {
-    max-width: 1320px;
-  }
-}/*# sourceMappingURL=style.css.map */
+}/*# sourceMappingURL=card.css.map */
